--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.3",
         "maatwebsite/excel": "^3.1",
-        "owen-it/laravel-auditing": "^13.1"
+        "owen-it/laravel-auditing": "^13.1",
+        "phpmailer/phpmailer": "^6.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
